# autofront

./: .gitignore  Cargo.toml  LICENSE  deny.toml
air/: Cargo.toml
analyzer/: Cargo.toml
autofront/: Cargo.toml  lex.cppm
autofront/src/: cli.rs  driver.rs  main.rs
autofront/src/cli/: cmd.rs  help.rs  parser.rs
common/src/: source.rs
diag/: Cargo.toml
diag/locale/en-US/: diag.ftl
diag/src/: lib.rs  sink.rs
hir/: Cargo.toml
hir/src/: id.rs  lib.rs  node.rs  print.rs
hir/src/node/: constant.rs  expr.rs  ty.rs
i18n/locale/en-US/: diag.ftl
i18n/locale/zh-CN/: diag.ftl
i18n/src/: i18n.rs
lexer/: Cargo.toml
lexer/locale/en-US/: lexer.ftl  tt.ftl
lexer/locale/zh-CN/: lexer.ftl
lexer/src/: lexer.rs  lib.rs  tokentree.rs
lexer/src/lexer/: chars.rs  errors.rs
lexer/src/tokentree/: errors.rs
locale/: Cargo.toml
locale/en-US/: cli.ftl  diag.ftl  parser.ftl  tt.ftl
locale/src/: lib.rs
locale/zh-CN/: cli.ftl  diag.ftl  parser.ftl  tt.ftl
lowerer/: Cargo.toml
lowerer/locale/en-US/: lowerer.ftl
lowerer/locale/zh-CN/: lowerer.ftl
lowerer/src/: context.rs  errors.rs  lib.rs  lower.rs  symbol.rs
macros/: Cargo.toml
macros/src/: lib.rs  names.rs  parse.rs  print.rs  recover.rs  span.rs
parser/: Cargo.toml
parser/src/: buffer.rs  errors.rs  lib.rs  parser.rs  syntax.rs  token.rs
parser/src/parser/: buffer.rs  print.rs  span.rs  syntax.rs
parser/src/parser/syntax/: parse.rs  pratt.rs  sync.rs  token.rs
parser/src/parser/syntax/pratt/: infix.rs  prefix.rs
parser/src/parser/syntax/token/: group.rs  ident.rs  keyword.rs  literal.rs  op.rs
parser/src/syntax/: check.rs  parse.rs  pratt.rs  sync.rs
parser/src/syntax/pratt/: infix.rs  prefix.rs
parser/src/token/: group.rs  ident.rs  keyword.rs  literal.rs  op.rs
src/: driver.rs  main.rs  pipelines.rs  utils.rs
src/cli/: cmd.rs  help.rs  parser.rs
src/pipelines/: lexer.rs  parser.rs  tokentree.rs
src/pipelines/lexer/: errors.rs  print.rs  token.rs
src/pipelines/parser/: buffer.rs  errors.rs  print.rs  span.rs  syntax.rs
src/pipelines/parser/syntax/: parse.rs  pratt.rs  sync.rs  token.rs
src/pipelines/parser/syntax/pratt/: infix.rs  prefix.rs
src/pipelines/parser/syntax/token/: group.rs  ident.rs  keyword.rs  literal.rs  op.rs
src/pipelines/tokentree/: errors.rs  print.rs  tree.rs
src/utils/: char.rs  diag.rs  i18n.rs  loc.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  lib.rs  print.rs  span.rs  token.rs
syntax/src/token/: group.rs  ident.rs  keyword.rs  literal.rs  op.rs
token/: Cargo.toml
token/src/: lib.rs  token.rs  tree.rs
token/src/token/: print.rs
token/src/tree/: print.rs
