[profile.release]
opt-level = 3
strip = true
lto = 'fat'
codegen-units = 1

[patch.crates-io]
annotate-snippets = { git = "https://github.com/KeqingMoe/annotate-snippets-rs.git", branch = "fix-unicode-patch" }

[workspace]
members = [
    "common/",
    "i18n/",
    "diag/",
    "token/",
    "lexer/",
    "parser/",
    "macros/",
    "autofront/",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
homepage = "https://autolang.dev"
repository = "https://github.com/AutoLang-Dev/autofront"
license = "Apache-2.0"
