[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
locale = { path = "../i18n" }
diag = { path = "../diag" }
token = { path = "../token" }
macros = { path = "../macros" }
num-bigint = "0.4.6"
annotate-snippets = "0.12.10"
