[package]
name = "parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
locale = { path = "../locale" }
diag = { path = "../diag" }
token = { path = "../token" }
syntax = { path = "../syntax" }
num-bigint = "0.4.6"
annotate-snippets = "0.12.10"
